[package]
name = "keybase-chat-tui"
version = "0.1.0"
authors = ["Nikolai Brendler <nbrendler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "keybase-chat-tui"
path = "src/main.rs"

[dependencies]
cursive = "0.13.0"
log = "0.4.8"
env_logger = "0.7.1"
serde =  { version = "1.0", features = ["derive"]}
serde_json = "1.0"
