[package]
name = "keybase-chat-tui"
version = "1.0.0"
authors = ["Nikolai Brendler <nbrendler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "keybase-chat-tui-bin"
path = "src/main.rs"

[dependencies]
cursive = "0.13.0"
log = "0.4.8"
env_logger = "0.7.1"
serde =  { version = "1.0", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.7.2"
signal-hook = "0.1.10"
dirs = "2.0.2"
